// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin Cascader basic Cascader 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    tabindex="-1"
    type="text"
    value=""
  />
  <span
    aria-label="down"
    class="anticon anticon-down ant-cascader-picker-arrow"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</span>
`;

exports[`plugin Cascader no source 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    tabindex="-1"
    type="text"
    value=""
  />
  <span
    aria-label="down"
    class="anticon anticon-down ant-cascader-picker-arrow"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</span>
`;

exports[`plugin RadioGroup basic RadioGroup 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="apple"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      苹果
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="peach"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      桃子
    </span>
  </label>
</div>
`;

exports[`plugin RadioGroup no source 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
/>
`;

exports[`plugin RangePicker no props 1`] = `
<div
  class="ant-picker ant-picker-range"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      placeholder="Start date"
      readonly=""
      size="21"
      value=""
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      class="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        class="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="End date"
      readonly=""
      size="21"
      value=""
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="left: 0px; width: 0px; position: absolute;"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      class="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`plugin RangePicker valueFormat is true, has value 1`] = `
<div
  class="ant-picker ant-picker-range"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      placeholder="Start date"
      readonly=""
      size="21"
      value="2000-05-01 00:00:00"
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      class="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        class="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="End date"
      readonly=""
      size="21"
      value="2020-01-01 00:00:00"
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="left: 0px; width: 0px; position: absolute;"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      class="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
  <span
    class="ant-picker-clear"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`plugin RangePicker valueFormat is utc, has value 1`] = `
<div
  class="ant-picker ant-picker-range"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      placeholder="Start date"
      readonly=""
      size="21"
      value="2000-05-01 00:00:00"
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      class="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        class="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="End date"
      readonly=""
      size="21"
      value="2020-01-01 00:00:00"
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="left: 0px; width: 0px; position: absolute;"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      class="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
  <span
    class="ant-picker-clear"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`plugin SulaCheckboxGroup SulaCheckboxGroup has source 1`] = `
<div
  class="ant-checkbox-group"
>
  <label
    class="ant-checkbox-group-item ant-checkbox-wrapper"
  >
    <span
      class="ant-checkbox"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
        value="apple"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
    <span>
      苹果
    </span>
  </label>
  <label
    class="ant-checkbox-group-item ant-checkbox-wrapper"
  >
    <span
      class="ant-checkbox"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
        value="peach"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
    <span>
      桃子
    </span>
  </label>
</div>
`;

exports[`plugin SulaCheckboxGroup SulaCheckboxGroup source null 1`] = `
<div
  class="ant-checkbox-group"
/>
`;

exports[`plugin datepicker has value, valueFormat props is true 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select date"
      readonly=""
      size="12"
      title="2020-02-01"
      value="2020-02-01"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-picker-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin datepicker no props 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select date"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin datepicker valueFormat props is utc 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select date"
      readonly=""
      size="12"
      title="2020-01-01"
      value="2020-01-01"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-picker-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin select select basic source 1`] = `
<div
  class="ant-select ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`plugin select select tree source 1`] = `
<div
  class="ant-select ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`plugin timepicker no props 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select time"
      readonly=""
      size="10"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin timepicker valueFormat is true, has value 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select time"
      readonly=""
      size="10"
      title="03:20:23"
      value="03:20:23"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-picker-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin timepicker valueFormat is utc, has value 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select time"
      readonly=""
      size="10"
      title="03:20:23"
      value="03:20:23"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-picker-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`plugin upload basic upload 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  >
    <span
      class="ant-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          上 传
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;
